--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,6 @@
 # China mirror of npm
-registry = https://registry.npmmirror.com
+; registry = https://registry.npmmirror.com
+registry = https://registry.npmjs.org
 
 # 安装依赖时锁定版本号
 save-exact = false
