chore: add lint-staged config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,10 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "allowJs": true,
+    "checkJs": true,
     "strict": true,
     "declaration": true,
+    "declarationDir": "dist/types",
     "declarationMap": true,
     "importHelpers": true,
     "noEmit": true,
