--- a/package.json
+++ b/package.json
@@ -10,22 +10,12 @@
     "type": "git",
     "url": "https://github.com/cshaptx4869/struct-to-docx.git"
   },
-  "keywords": [
-    "docx.js",
-    "docx",
-    "builder",
-    "docx-builder",
-    "template",
-    "docx-template"
-  ],
+  "keywords": ["docx.js", "docx", "builder", "docx-builder", "template", "docx-template"],
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "browser": "dist/index.umd.js",
   "types": "dist/types/index.d.ts",
-  "files": [
-    "README.md",
-    "dist"
-  ],
+  "files": ["LICENSE", "README.md", "dist"],
   "scripts": {
     "build": "rollup -c",
     "clean": "rm -rf dist",
@@ -49,8 +39,5 @@
     "lint-staged": "^16.2.6",
     "rollup": "^4.52.5",
     "typescript": "^5.9.3"
-  },
-  "lint-staged": {
-    "*": "eslint --fix"
   }
 }
