--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prepublishOnly": "npm run clean && npm run build",
     "lint": "eslint . --fix",
     "type-check": "tsc --noEmit",
+    "test": "node test/test.js",
     "prepare": "husky"
   },
   "dependencies": {
