--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,5 @@
 # China mirror of npm
-; registry = https://registry.npmmirror.com
-registry = https://registry.npmjs.org
+registry = https://registry.npmmirror.com
 
 # 安装依赖时锁定版本号
 save-exact = false
